# ConfLUNet

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
conflunet/: data_load.py  inference.py  metrics.py  model.py  postprocess.py  train.py  train_semantic_model.py  unit_tests.py  utils.py
conflunet/architecture/: conflunet.py  nnconflunet.py  utils.py
conflunet/dataloading/: dataloaders.py  datasets.py  utils.py
conflunet/dataloading/transforms/: loading.py  utils.py
conflunet/dataloading/transforms/data_augmentations/: adjustcontrast.py  copy_paste.py  labelstoimage.py  motion.py  scaleintensityfixedmean.py  simulatelowresolution.py
conflunet/docs/: docker_instructions.md  how_to_use_conflunet.md  installation_instructions.md  run_inference_with_pretrained_models.md
conflunet/evaluation/: detection.py  instance_segmentation.py  metrics.py  run_evaluation.py  semantic_segmentation.py  utils.py
conflunet/inference/: predict.py  predict_folds.py  predict_from_raw_input.py
conflunet/inference/predictors/: base_predictor.py  instance.py  semantic.py
conflunet/model_sharing/: export_model.py  import_model.py
conflunet/postprocessing/: basic_postprocessor.py  instance.py  semantic.py  small_instances_removal.py  utils.py
conflunet/preprocessing/: plan_and_preprocess_entrypoints.py  preprocess.py  preprocessors.py  utils.py  verify_dataset_integrity.py
conflunet/scripts/: make_shape_dictionary.py
conflunet/training/: conflunet_trainer.py  losses.py  run_training.py  semantic_trainer.py  trainer.py  utils.py
conflunet/utilities/: planning_and_configuration.py
